# TFM_ROS_ORIN_CONF_P3DX

./: .gitignore  README.md  test_mpu.py
config/: ekf_pioneer.yaml
datasets/linear/rosbag2_2026_06_17-13_15_57/: metadata.yaml  rosbag2_2026_06_17-13_15_57_0.db3
datasets/preliminary/rosbag2_2026_06_17-11_24_35/: metadata.yaml  rosbag2_2026_06_17-11_24_35_0.db3
datasets/preliminary/rosbag2_2026_06_17-11_49_25/: metadata.yaml  rosbag2_2026_06_17-11_49_25_0.db3
datasets/rotation/rosbag2_2026_06_17-13_31_38/: metadata.yaml  rosbag2_2026_06_17-13_31_38_0.db3
datasets/static/rosbag2_2026_06_17-13_03_03/: metadata.yaml
src/Pioneer-3DX-ROS2/: README.md
src/Pioneer-3DX-ROS2/p3dx_description/: CMakeLists.txt  package.xml
src/Pioneer-3DX-ROS2/p3dx_description/launch/: gz.launch.py  p3dx_spawn.launch.py  rviz.launch.py
src/Pioneer-3DX-ROS2/p3dx_description/rviz/: custom_setup.rviz  setup.rviz
src/Pioneer-3DX-ROS2/p3dx_description/urdf/: gz.xacro  materials.xacro  p3dx.gazebo  p3dx.urdf  p3dx.xacro  p3dx_modified_1.xacro  p3dx_wheel.xacro
src/Pioneer-3DX-ROS2/p3dx_llm_control/: CMakeLists.txt  package.xml
src/Pioneer-3DX-ROS2/p3dx_llm_control/config/: llm_config.yaml  velocity_limits.yaml
src/Pioneer-3DX-ROS2/p3dx_llm_control/launch/: llm_control.launch.py
src/Pioneer-3DX-ROS2/p3dx_llm_control/prompts/: system_prompt.txt
src/Pioneer-3DX-ROS2/p3dx_llm_control/src/: interactive_control.py  llm_controller_node.cpp  llm_interface.py
src/Pioneer-3DX-ROS2/p3dx_llm_control/srv/: ExecuteLLMCommand.srv
src/Pioneer-3DX-ROS2/ros2aria/: CMakeLists.txt  package.xml
src/Pioneer-3DX-ROS2/ros2aria/src/: ArTimeToROSTime.h  LaserPublisher.cpp  LaserPublisher.h  Ros2Aria.cpp  right_base.cpp
src/pioneer_imu_driver/: package.xml  setup.cfg  setup.py
src/pioneer_imu_driver/pioneer_imu_driver/: imu_node.py
src/pioneer_p3dx_description/: package.xml  setup.cfg  setup.py
src/pioneer_p3dx_description/launch/: display.launch.py  gazebo.launch.py
src/pioneer_p3dx_description/urdf/: pioneer_p3dx.urdf
src/pioneer_p3dx_description/worlds/: empty.world
src/pioneer_real_driver/: package.xml  setup.cfg  setup.py
src/pioneer_real_driver/pioneer_real_driver/: serial_test.py
tools/: read_imu.py
