<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>p3dx_description</name>
  <version>0.1.0</version>
  <description>Description package for Pioneer 3DX robot</description>
  <maintainer email="rvishwanath03@outlook.com">Vishwanath_R</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclpy</depend>
  <depend>ros_gz</depend>
  <exec_depend>ros2launch</exec_depend>
  <!-- <exec_depend>launch</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend> -->
  
  <!-- <export>
    <build_type>ament_python</build_type>
    <ros2_package_name>p3dx_description</ros2_package_name>
    <urdf_model>urdf/p3dx.xacro</urdf_model>
    <urdf_model_param>robot_description</urdf_model_param>
    <description_package>p3dx_description</description_package>
    <description_file>urdf/p3dx.xacro</description_file>
  </export> -->

</package>
